--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </li>
 
               <li class="buttonHeaderContainer">
-                <button type="button" name="button" class="whiteFont cyanbutton">
+                <button type="button" name="button" class="cyanbutton">
                   {{buttonHeaderRight}}
                 </button>
               </li>
@@ -124,7 +124,7 @@
                   </p>
                 </div>
                 <div class="">
-                  <button type="button" name="button" class="cyanbutton whiteFont">LEARN MORE</button>
+                  <button type="button" name="button" class="cyanbutton">LEARN MORE</button>
                 </div>
 
               </div>
@@ -142,22 +142,36 @@
 
         </section>
         <!-- 5 making an impact -->
-        <section>
+        <section class="five">
 
         </section>
 
         <!-- 6 client feedback -->
-        <section>
+        <section class="six">
 
         </section>
         <!-- 7 i quattro quadrati (event elevate bonjour cafe...) -->
-        <section>
+        <section class="seven">
 
         </section>
 
         <!-- 8 ready to talk -->
-        <section>
+        <section class="eight">
+          <div class="jumbotron">
+            <img src="img/ready_to_talk_cta_bg.jpg" alt="">
+            <div class="jumbotext">
+              <div class=" whiteFont fontSize50">
+                Ready to talk?
+              </div>
+              <div class="dustyGrayFont">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </div>
+              <div class="">
+                <button type="button" name="button" class="cyanbutton">LET'S TALK</button>
+              </div>
 
+            </div>
+          </div>
         </section>
       </main>
 
