inizio a toccare il footer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="https://kit.fontawesome.com/37e6ce0705.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div id="app">
+    <div id="sitoWeb">
       <!-- nell'header metto solo la prima stisciolina bianca  -->
-      <header>
+      <header id="headerVue">
 
         <div class="headerLeft">
           <a href="#">
@@ -176,7 +176,7 @@
       </main>
 
       <!-- nel footer metto le ultime due sezioni( grigiascura - nera) -->
-      <footer>
+      <footer id="footerVue">
         <!-- A- Avada Finance -->
         <section>
 
