--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
         </section>
 
         <!-- 6 client feedback -->
-        <section class="six">
-
+        <section class="six blackHazeB">
+          <div class="balticSeaFont fontSize40">
+            Client Feedback
+          </div>
+          <div class="righina"></div>
         </section>
         <!-- 7 i quattro quadrati (event elevate bonjour cafe...) -->
         <section class="seven">
