--- a/index.html
+++ b/index.html
@@ -156,6 +156,90 @@
         <!-- 7 i quattro quadrati (event elevate bonjour cafe...) -->
         <section class="seven">
 
+          <div class="sec7top">
+            <!-- 1/4 -->
+            <div class="boxSection7">
+              <div class="sec7img">
+                <img src="img/client-logo-4-200x87.png" alt="">
+              </div>
+              <div class="sec7text dustyGrayFont">
+                "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
+              </div>
+            </div>
+
+            <!-- 2/4 -->
+            <div class="boxSection7">
+              <div class="sec7img">
+                <img src="img/client-logo-1-1-200x87.png" alt="">
+              </div>
+              <div class="sec7text dustyGrayFont">
+                "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
+              </div>
+            </div>
+
+            <!-- 3/4 -->
+            <div class="boxSection7">
+              <div class="sec7img">
+                <img src="img/client-logo-2-200x87.png" alt="">
+              </div>
+              <div class="sec7text dustyGrayFont">
+                "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
+              </div>
+            </div>
+
+            <!-- 4/4 -->
+            <div class="boxSection7">
+              <div class="sec7img">
+                <img src="img/client-logo-3-200x87.png" alt="">
+              </div>
+              <div class="sec7text dustyGrayFont">
+                "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
+              </div>
+            </div>
+          </div>
+
+          <div class="sec7bottom">
+            <!-- 1/4 -->
+            <div class="sec7andreRipetitivo">
+              <div class="balticSeaFont">
+                ANDRE MENDOZA
+              </div>
+              <div class="dustyGrayFont">
+                CREATIVE MARKET
+              </div>
+            </div>
+            <!-- 2/4 -->
+            <div class="sec7andreRipetitivo">
+              <div class="balticSeaFont">
+                ANDRE MENDOZA
+              </div>
+              <div class="dustyGrayFont">
+                CREATIVE MARKET
+              </div>
+            </div>
+            <!-- 3/4 -->
+            <div class="sec7andreRipetitivo">
+              <div class="balticSeaFont">
+                ANDRE MENDOZA
+              </div>
+              <div class="dustyGrayFont">
+                CREATIVE MARKET
+              </div>
+            </div>
+            <!-- 4/4 -->
+            <div class="sec7andreRipetitivo">
+              <div class="balticSeaFont">
+                ANDRE MENDOZA
+              </div>
+              <div class="dustyGrayFont">
+                CREATIVE MARKET
+              </div>
+            </div>
+
+
+
+          </div>
+
         </section>
 
         <!-- 8 ready to talk -->
