--- a/index.html
+++ b/index.html
@@ -143,6 +143,26 @@
         </section>
         <!-- 5 making an impact -->
         <section class="five">
+          <div class="sec5left">
+            <img src="img/counters-bg-image.jpg" alt="">
+            <div class="jumbotext">
+              <div class="whiteFont">
+                Investment Numbers
+              </div>
+              <div class="whiteFont fontSize30">
+                Making An Impact In Our Communities
+              </div>
+              <div class="">
+                <button class="cyanbutton" type="button" name="button">LEARN MORE</button>
+              </div>
+
+            </div>
+
+          </div>
+          <div class="sec5right">
+
+          </div>
+
 
         </section>
 
