--- a/index.html
+++ b/index.html
@@ -17,35 +17,32 @@
       <header id="headerVue">
 
         <div class="headerLeft">
-          <a href="#">
+          <a href="#" class="headerRight-main-a">
             <img :src="logoHeader" alt="">
           </a>
         </div>
 
         <div class="headerRight">
-          <nav>
+          <nav class="mainNavRight">
 
             <ul>
+
               <li v-for="(item, index) in arrayHeaderRight" class="dropitem" @click="dropDownFunction(index)">
-                <!-- @click="dropDownFunction(index)" -->
-                <a href="#" class="dustyGrayFont">
+                <a href="#" class="dustyGrayFont headerRight-main-a">
                   <span>
-                    {{item.title}} {{item.aperto}}
+                    {{item.title}} <!-- {{item.aperto}} -->
                   </span>
                 </a>
-<!-- ternario  -->
-                <div class="blackHazeBackgroundackground dropdown" :class=""  >
+
+                <div class="blackHazeBackgroundackground dropdown" :class="item.aperto == true ? 'visiblediv': null">
                   <ul class="dropdownUl">
-                    <li v-for="littleMenu in item.drop">
-                      <a href="#">
-                        <span class="dustyGrayFont">
-                          {{littleMenu}}
-                        </span>
+                    <li v-for="littleMenu in item.drop" class="dustyGrayFont dropdownLi">
+                      <a href="#" class="dustyGrayFont dropdownA">
+                        {{littleMenu}}
                       </a>
                     </li>
                   </ul>
                 </div>
-
 
               </li>
 
@@ -56,14 +53,11 @@
               </li>
 
               <li>
-                <a href="#">
+                <a href="#" class="headerRight-main-a">
                   <i class="fas fa-plus dustyGrayFont"></i>
                 </a>
               </li>
             </ul>
-
-            <div>
-            </div>
 
           </nav>
         </div>
