Finiti header e nav con vue- stasera/domani finisco l'ultima sezione
manca sezione QUATTRO: (specialty services) 

e di bonus provo a inserire una funzione di scrollup al click a fondo pagina

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header id="headerVue">
 
         <div class="headerLeft">
-          <a href="#" class="headerRight-main-a">
+          <a href="#">
             <img :src="logoHeader" alt="">
           </a>
         </div>
@@ -148,6 +148,7 @@
 
         <!-- 4 specialty services -->        <!--  UNICO________________________________-MANCANTE -->
         <section class="four">
+          DA FARE
         </section>
         <!-- 5 making an impact -->
         <section class="five">
