finita versione base

--- a/index.html
+++ b/index.html
@@ -148,7 +148,79 @@
 
         <!-- 4 specialty services -->        <!--  UNICO________________________________-MANCANTE -->
         <section class="four">
-          DA FARE
+          <div class="secFourContainer">
+            <div class="secFourTop">
+              <div class="balticSeaFont fontSize40">
+                Client Feedback
+              </div>
+              <div class="righina"></div>
+              <div class="sez4Subtitle dustyGrayFont">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua. <br>
+                Laboris nisi ut aliquip ex ea commodo consequat.
+              </div>
+
+            </div>
+
+            <div class="secFourBottom">
+
+              <div class="secFourBox">
+                <div class="secFourBoxTop">
+                  <div class="secFourBoxTop1on3">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                  <div class="secFourBoxTop2on3">
+                    Small Business Loans
+                  </div>
+                  <div class="secFourBoxTop3on3">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  </div>
+                </div>
+                <div class="secFourBoxBottom">
+                  <button type="button" name="button">Learn More</button>
+                </div>
+
+
+              </div>
+              <div class="secFourBox">
+                <div class="secFourBoxTop">
+                  <div class="secFourBoxTop1on3">
+                    <i class="fas fa-gem"></i>
+                  </div>
+                  <div class="secFourBoxTop2on3">
+                    Small Business Loans
+                  </div>
+                  <div class="secFourBoxTop3on3">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  </div>
+                </div>
+                <div class="secFourBoxBottom">
+                  <button type="button" name="button">Learn More</button>
+                </div>
+
+
+              </div>
+              <div class="secFourBox">
+                <div class="secFourBoxTop">
+                  <div class="secFourBoxTop1on3">
+                    <i class="fas fa-chart-line"></i>
+                  </div>
+                  <div class="secFourBoxTop2on3">
+                    Small Business Loans
+                  </div>
+                  <div class="secFourBoxTop3on3">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  </div>
+                </div>
+                <div class="secFourBoxBottom">
+                  <button type="button" name="button">Learn More</button>
+                </div>
+
+
+              </div>
+
+            </div>
+
+          </div>
         </section>
         <!-- 5 making an impact -->
         <section class="five">
