--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </span>
                 </a>
 
-                <div class="blackHazeBackgroundackground dropdown" :class="item.aperto == true ? 'visiblediv': null">
+                <div class="blackHazeBackground dropdown" :class="item.aperto == true ? 'visiblediv': null">
                   <ul class="dropdownUl">
                     <li v-for="littleMenu in item.drop" class="dustyGrayFont dropdownLi">
                       <a href="#" class="dustyGrayFont dropdownA">
@@ -146,7 +146,7 @@
           </div>
         </section>
 
-        <!-- 4 specialty services -->        <!--  UNICO________________________________-MANCANTE -->
+        <!-- 4 specialty services -->
         <section class="four">
           <div class="secFourContainer">
             <div class="secFourTop">
@@ -162,7 +162,7 @@
             </div>
 
             <div class="secFourBottom">
-
+              <!-- box1/3 -->
               <div class="secFourBox">
                 <div class="secFourBoxTop">
                   <div class="secFourBoxTop1on3">
@@ -176,46 +176,42 @@
                   </div>
                 </div>
                 <div class="secFourBoxBottom">
-                  <button type="button" name="button">Learn More</button>
+                  <button type="button" name="button" class="secFourBoxBottomButton">Learn More</button>
                 </div>
-
-
               </div>
+              <!-- 2/3 -->
               <div class="secFourBox">
                 <div class="secFourBoxTop">
                   <div class="secFourBoxTop1on3">
                     <i class="fas fa-gem"></i>
                   </div>
                   <div class="secFourBoxTop2on3">
-                    Small Business Loans
+                    Credit Rating Advice
                   </div>
                   <div class="secFourBoxTop3on3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </div>
                 </div>
                 <div class="secFourBoxBottom">
-                  <button type="button" name="button">Learn More</button>
+                  <button type="button" name="button" class="secFourBoxBottomButton">Learn More</button>
                 </div>
-
-
               </div>
+              <!-- 3/3 -->
               <div class="secFourBox">
                 <div class="secFourBoxTop">
                   <div class="secFourBoxTop1on3">
                     <i class="fas fa-chart-line"></i>
                   </div>
                   <div class="secFourBoxTop2on3">
-                    Small Business Loans
+                    Fast Crowd Funding
                   </div>
                   <div class="secFourBoxTop3on3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </div>
                 </div>
                 <div class="secFourBoxBottom">
-                  <button type="button" name="button">Learn More</button>
+                  <button type="button" name="button" class="secFourBoxBottomButton">Learn More</button>
                 </div>
-
-
               </div>
 
             </div>
@@ -488,9 +484,6 @@
 
 
           </div>
-
-
-
 
         </section>
       </footer>
