--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title>Cavicchioli proj-html-vuejs</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/37e6ce0705.js" crossorigin="anonymous"></script>
   </head>
@@ -69,7 +70,7 @@
         <section class="one">
           <div class="jumbotron blackHazeBackground">
             <img src="img/home_finance_slider_bg.jpg" alt="">
-            <div class="jumbotext whiteFont fontSize50">
+            <div class="jumbotext whiteFont fontSize50 fontFamilyLora">
               Right People<span class="cyanFont">.</span> Right Investments<span class="cyanFont">.</span>
             </div>
           </div>
@@ -111,13 +112,14 @@
           </ul>
 
         </section>
+
         <!-- 3 cloud based finance -->
         <section class="three">
           <div class="containerThree">
             <div class="boxLeft width50">
               <div class="textContainer3">
 
-                <div class="sez3Title balticSeaFont fontSize40">
+                <div class="sez3Title balticSeaFont fontSize40 fontFamilyLora">
                   Cloud Based Finance
                 </div>
 
@@ -150,8 +152,8 @@
         <section class="four">
           <div class="secFourContainer">
             <div class="secFourTop">
-              <div class="balticSeaFont fontSize40">
-                Client Feedback
+              <div class="balticSeaFont fontSize40 fontFamilyLora">
+                Specialty Services
               </div>
               <div class="righina"></div>
               <div class="sez4Subtitle dustyGrayFont">
@@ -168,7 +170,7 @@
                   <div class="secFourBoxTop1on3">
                     <i class="fas fa-globe"></i>
                   </div>
-                  <div class="secFourBoxTop2on3">
+                  <div class="secFourBoxTop2on3 fontFamilyLora">
                     Small Business Loans
                   </div>
                   <div class="secFourBoxTop3on3">
@@ -185,7 +187,7 @@
                   <div class="secFourBoxTop1on3">
                     <i class="fas fa-gem"></i>
                   </div>
-                  <div class="secFourBoxTop2on3">
+                  <div class="secFourBoxTop2on3 fontFamilyLora">
                     Credit Rating Advice
                   </div>
                   <div class="secFourBoxTop3on3">
@@ -202,7 +204,7 @@
                   <div class="secFourBoxTop1on3">
                     <i class="fas fa-chart-line"></i>
                   </div>
-                  <div class="secFourBoxTop2on3">
+                  <div class="secFourBoxTop2on3 fontFamilyLora">
                     Fast Crowd Funding
                   </div>
                   <div class="secFourBoxTop3on3">
@@ -218,6 +220,7 @@
 
           </div>
         </section>
+
         <!-- 5 making an impact -->
         <section class="five">
           <div class="sec5left">
@@ -226,7 +229,7 @@
               <div class="whiteFont">
                 Investment Numbers
               </div>
-              <div class="whiteFont fontSize30">
+              <div class="whiteFont fontSize30 fontFamilyLora">
                 Making An Impact In Our Communities
               </div>
               <div class="">
@@ -292,11 +295,12 @@
 
         <!-- 6 client feedback -->
         <section class="six blackHazeBackground flexColumnCenterCenter">
-          <div class="balticSeaFont fontSize40">
+          <div class="balticSeaFont fontSize40 fontFamilyLora">
             Client Feedback
           </div>
           <div class="righina"></div>
         </section>
+
         <!-- 7 i quattro quadrati (event elevate bonjour cafe...) -->
         <section class="seven">
 
@@ -306,7 +310,7 @@
               <div class="sec7img">
                 <img src="img/client-logo-4-200x87.png" alt="">
               </div>
-              <div class="sec7text dustyGrayFont">
+              <div class="sec7text dustyGrayFont fontFamilyLora">
                 "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
               </div>
             </div>
@@ -316,7 +320,7 @@
               <div class="sec7img">
                 <img src="img/client-logo-1-1-200x87.png" alt="">
               </div>
-              <div class="sec7text dustyGrayFont">
+              <div class="sec7text dustyGrayFont fontFamilyLora">
                 "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
               </div>
             </div>
@@ -326,7 +330,7 @@
               <div class="sec7img">
                 <img src="img/client-logo-2-200x87.png" alt="">
               </div>
-              <div class="sec7text dustyGrayFont">
+              <div class="sec7text dustyGrayFont fontFamilyLora">
                 "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
               </div>
             </div>
@@ -336,7 +340,7 @@
               <div class="sec7img">
                 <img src="img/client-logo-3-200x87.png" alt="">
               </div>
-              <div class="sec7text dustyGrayFont">
+              <div class="sec7text dustyGrayFont fontFamilyLora">
                 "Avada Finance offers a fantastic service! It is so easy to use and the customer support is the best around. This payment option is my number one choice. I always recommend it."
               </div>
             </div>
@@ -391,7 +395,7 @@
           <div class="jumbotron">
             <img src="img/ready_to_talk_cta_bg.jpg" alt="">
             <div class="jumbotext">
-              <div class=" whiteFont fontSize50">
+              <div class=" whiteFont fontSize50 fontFamilyLora">
                 Ready to talk?
               </div>
               <div class="dustyGrayFont">
