--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@
       </footer>
 
       <!-- back to the start of the page -->
-      <!-- <div class="backToStartBigContainer">
+      <div class="backToStartBigContainer">
         <div class="backToStartLittleContainer blackHazeBackground" @click="backToStart()">
           <i class="fas fa-chevron-up balticSeaFont"></i>
         </div>
-      </div> -->
+      </div>
 
     </div>
 
